<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok">OK</string>
    <string name="app_name">Biegaj.my</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">948936338472360</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_details">USTAWIENIA</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_event_list">BIEGAJMY</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_activity_event_new">UTWÓRZ TRENING</string>
    <string name="title_activity_user_events">MOJE TRENINGI</string>


    <string name="event_error_msg">Ups. Coś się nie udało. Spróbuj jeszcze raz</string>
    <string name="event_join_error_already_participating">Bierzesz już udział w tym treningu</string>
    <string name="event_search_error_msg">Ups. Coś się nie udało. Spróbuj jeszcze raz</string>

    <!-- Event Form -->
    <string name="event_form_headline">Tytuł</string>
    <string name="event_form_description">Opis treningu</string>
    <string name="event_form_date">Dzień</string>
    <string name="event_form_time">Godzina</string>
    <string name="event_form_distance">Dystans [km]</string>
    <string name="event_form_pace">Tempo [min/km]</string>
    <string name="event_form_tags">Tagi</string>

    <string name="event_form_headline_error_msg">Tytuł wymagany</string>
    <string name="event_form_description_error_msg">Opis wymagany</string>
    <string name="event_form_date_error_msg">Dzień wymagany</string>
    <string name="event_form_time_error_msg">Godzina wymagana</string>
    <string name="event_form_distance_error_msg">Dystans wymagany</string>
    <string name="event_form_pace_error_msg">Tempo wymagane</string>
    <string name="event_form_tags_error_msg">Dodaj tagi</string>
    <string name="event_form_button_possitive">OK</string>
    <string name="event_form_button_negative">ANULUJ</string>
    <!-- -->

    <!-- Splash -->
    <string name="splash_location_services_dialog_yes">Włącz</string>
    <string name="splash_location_services_dialog_no">Anuluj</string>
    <string name="splash_location_services_disabled">Aby kontynuować włącz usługi lokalizacyjne</string>
    <string name="splash_location_services_waiting">Pobieram twoją ostatnią lokalizację...</string>
    <!-- -->

    <!-- User -->
    <string name="user_form_first_name">Imię</string>
    <string name="user_form_last_name">Nazwisko</string>
    <string name="user_form_bio">Kilka słów o Tobie</string>
    <string name="user_form_telephone">Telefon</string>
    <string name="user_form_www">Strona WWW</string>
    <string name="user_form_email">E-mail</string>

    <string name="user_update_ok_msg">Profil zaktualizowany</string>
    <string name="user_update_failed_msg">Aktualnie niemożliwe</string>
    <string name="user_update_failed_email_exists">Taki email już istnieje</string>
    <string name="user_photo_update_ok_msg">Zdjęcie zaktualizowane</string>
    <string name="user_photo_update_failed_msg">Nie udało się zaktualizować zdjęcia</string>
    <string name="user_token_request_failed_msg">Weryfikacja aktualnie nie możliwa</string>

    <string name="user_form_field_missing">Pole wymagane</string>

    <string-array name="photo_sources">
        <item>Wybierz z galerii</item>
        <item>Utwórz nowe</item>
    </string-array>

    <string name="user_profile_create">Załóż profil</string>
    <string name="user_profile_call_to_action">Nie masz jeszcze profilu????\n\nA chcesz biegac z fajnymi dupami?\n\nChcesz byc zajebisty?\n\n\n\nTo na co kurwa czekasz...</string>
    <!-- -->

    <!-- Search Settings -->
    <string name="search_settings_button">FILTRUJ TRENINGI</string>
    <string name="distance_selector_label">ODLEGŁOŚĆ STARTU OD CIEBIE [km]</string>
    <string name="tag_selector_label">ZNACZNIK</string>
    <string name="tag_recommendation_label">POPULARNE W TWOJEJ OKOLICY</string>
    <!-- -->

    <string name="auth_required_join">Aby dołączyć do treningu wymagane jest konto użytkownika. Czy chcesz założyć konto?</string>
    <string name="auth_required_create">Aby utworzyć trening wymagane jest konto użytkownika. Czy chcesz założyć konto?</string>
    <string name="auth_required_yes">TAK</string>
    <string name="auth_required_no">NIE</string>

    <string name="location_not_found">Nie można znaleźć podanego adresu</string>
    <string name="no_user_events">Nie masz zaplanowanych żadnych biegów. Dołącz do innych lub dodaj swój trening.</string>
    <string name="no_events">Brak biegów w Twojej okolicy. Zmień promień wyszukiwania w zakładce "Filtruj" lub dodaj swój trening.</string>
    <string name="event_deletion">Czy na pewno chcesz usunąć ten trening?</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>

</resources>
