<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <RelativeLayout style="@style/event_form">

        <fragment style="@style/event_form_map"
            android:id="@+id/form_event_location"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <EditText style="@style/event_form_field"
            android:id="@+id/form_event_headline"
            android:hint="@string/event_form_headline"
            android:layout_below="@+id/form_event_location"/>

        <LinearLayout style="@style/event_form_field"
            android:id="@+id/form_event_date_time"
            android:layout_below="@+id/form_event_headline">

            <EditText style="@style/event_form_datetime_field"
                android:id="@+id/form_event_date"
                android:hint="@string/event_form_date"/>

            <EditText style="@style/event_form_datetime_field"
                android:id="@+id/form_event_time"
                android:hint="@string/event_form_time"/>

        </LinearLayout>

        <EditText style="@style/event_form_numeric_field"
            android:id="@+id/form_event_distance"
            android:hint="@string/event_form_distance"
            android:layout_below="@+id/form_event_date_time"/>

        <EditText style="@style/event_form_decimal_field"
            android:id="@+id/form_event_pace"
            android:hint="@string/event_form_pace"
            android:layout_below="@+id/form_event_distance"/>

        <EditText style="@style/event_form_numeric_field"
            android:id="@+id/form_event_duration"
            android:hint="@string/event_form_duration"
            android:layout_below="@+id/form_event_pace"/>

        <EditText style="@style/event_form_numeric_field"
            android:id="@+id/form_event_spots"
            android:hint="@string/event_form_spots"
            android:layout_below="@+id/form_event_duration"/>

        <EditText style="@style/event_form_multiline_field"
            android:id="@+id/form_event_description"
            android:hint="@string/event_form_description"
            android:layout_below="@+id/form_event_spots"/>

        <EditText style="@style/event_form_multiline_field"
            android:id="@+id/form_event_tags"
            android:hint="@string/event_form_tags"
            android:layout_below="@+id/form_event_description"/>

    </RelativeLayout>
</ScrollView>
